# Socket

./: CMakeLists.txt  readme.md
Client/: Client.cpp
Server/: DataStruct.h  GlobalVars.cpp  Server.cpp  ServerSocket.cpp  ServerSocket.h  readme.md
Server/ClientSocket/: ClientClass.cpp  ClientClass.h
Server/Command/: Commands.cpp  Commands.h
Server/UserSQL/: UserData.cpp  UserData.h  UserFlies.cpp  UserFlies.h
